--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "bootstrapvalidator",
     "description": "The best jQuery plugin to validate form fields. Designed to use with Bootstrap 3",
-    "version": "0.5.3",
+    "version": "0.6.0-dev",
     "ignore": [
         "demo",
         "screenshots",
