--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   {
     "name": "Nguyen Huu Phuoc",
     "email": "phuoc@huuphuoc.me",
-    "homepage": "https://twitter.com/nghuuphuoc",
+    "homepage": "https://twitter.com/nghuuphuoc"
   }
   ]
 }
