--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootstrapvalidator",
+  "name": "rbnvrw/bootstrapvalidator",
   "description": "The best jQuery plugin to validate form fields. Designed to use with Bootstrap 3",
   "keywords": ["jQuery", "plugin", "validate", "validator", "form", "Bootstrap"],
   "homepage": "http://bootstrapvalidator.com",
