#1185: Add composer.json file, thanks to @rbnvrw

--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,30 @@
 {
-  "name": "rbnvrw/bootstrapvalidator",
-  "description": "The best jQuery plugin to validate form fields. Designed to use with Bootstrap 3",
-  "keywords": ["jQuery", "plugin", "validate", "validator", "form", "Bootstrap"],
-  "homepage": "http://bootstrapvalidator.com",
-  "license": "http://bootstrapvalidator.com/license/",
-  "type": "library",
-  "authors": [
-  {
-    "name": "Nguyen Huu Phuoc",
-    "email": "phuoc@huuphuoc.me",
-    "homepage": "https://twitter.com/nghuuphuoc"
-  }
-  ]
+    "name": "nghuuphuoc/bootstrapvalidator",
+    "description": "The best jQuery plugin to validate form fields. Designed to use with Bootstrap 3",
+    "version": "0.6.0-dev",
+    "type": "library",
+    "keywords": [
+        "jQuery",
+        "plugin",
+        "validate",
+        "validator",
+        "form",
+        "Bootstrap"
+    ],
+    "homepage": "http://bootstrapvalidator.com",
+    "license": "http://bootstrapvalidator.com/license/",
+    "authors": [
+        {
+            "name": "Nguyen Huu Phuoc",
+            "email": "phuoc@huuphuoc.me",
+            "homepage": "https://twitter.com/nghuuphuoc"
+        }
+    ],
+    "support": {
+        "issues": "https://github.com/nghuuphuoc/bootstrapvalidator/issues"
+    },
+    "require": {
+        "components/jquery": ">= 1.9.1",
+        "twbs/bootstrap": ">= 3.0.0"
+    }
 }
