--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,20 @@
         "dist/js/bootstrapValidator.js"
     ],
     "license": "http://bootstrapvalidator.com/license/",
-    "keywords": ["jQuery", "plugin", "validate", "validator", "form", "Bootstrap"],
+    "keywords": [
+        "jQuery",
+        "plugin",
+        "validate",
+        "validator",
+        "form",
+        "Bootstrap"
+    ],
     "authors": [
-        { "name": "Nguyen Huu Phuoc", "email": "phuoc@huuphuoc.me"," homepage": "https://twitter.com/nghuuphuoc" }
+        {
+            "name": "Nguyen Huu Phuoc",
+            "email": "phuoc@huuphuoc.me",
+            "homepage": "https://twitter.com/nghuuphuoc"
+        }
     ],
     "homepage": "http://bootstrapvalidator.com",
     "repository": {
