:heart: #1194: Support Foundation framework

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "nghuuphuoc/bootstrapvalidator",
-    "description": "The best jQuery plugin to validate form fields. Designed to use with Bootstrap 3",
+    "description": "The best jQuery plugin to validate form fields. Support Bootstrap, Foundation frameworks",
     "version": "0.6.0-dev",
     "type": "library",
     "keywords": [
