--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nghuuphuoc/bootstrapvalidator",
+    "name": "formvalidation/formvalidation",
     "description": "The best jQuery plugin to validate form fields. Support Bootstrap, Foundation, Pure, SemanticUI, UIKit frameworks",
     "version": "0.6.0-dev",
     "type": "library",
@@ -15,8 +15,8 @@
         "SemanticUI",
         "UIKit"
     ],
-    "homepage": "http://bootstrapvalidator.com",
-    "license": "http://bootstrapvalidator.com/license/",
+    "homepage": "http://formvalidation.io",
+    "license": "http://formvalidation.io/license/",
     "authors": [
         {
             "name": "Nguyen Huu Phuoc",
@@ -25,7 +25,7 @@
         }
     ],
     "support": {
-        "issues": "https://github.com/nghuuphuoc/bootstrapvalidator/issues"
+        "issues": "https://github.com/formvalidation/formvalidation/issues"
     },
     "require": {
         "components/jquery": ">= 1.9.1",
