--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
         "email": "phuoc@huuphuoc.me",
         "url": "https://twitter.com/nghuuphuoc"
     },
-    "homepage": "http://bootstrapvalidator.com",
+    "homepage": "http://formvalidation.io",
     "bugs": {
-        "url": "https://github.com/nghuuphuoc/bootstrapvalidator/issues",
+        "url": "https://github.com/formvalidation/formvalidation/issues",
         "email": "phuoc@huuphuoc.me"
     },
-    "license": "http://bootstrapvalidator.com/license/",
+    "license": "http://formvalidation.io/license/",
     "main": "./dist/js/formValidation.js",
     "repository": {
         "type": "git",
-        "url": "https://github.com/nghuuphuoc/bootstrapvalidator.git"
+        "url": "https://github.com/formvalidation/formvalidation.git"
     },
     "devDependencies": {
         "grunt": "latest",
