--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "formvalidation/formvalidation",
     "description": "The best jQuery plugin to validate form fields. Support Bootstrap, Foundation, Pure, SemanticUI, UIKit frameworks",
-    "version": "0.6.0-dev",
+    "version": "0.6.0",
     "type": "library",
     "keywords": [
         "jQuery",
