--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "formValidation",
-    "version": "0.6.0-dev",
+    "name": "formvalidation",
+    "version": "0.6.0",
     "description": "The best jQuery plugin to validate form fields. Support Bootstrap, Foundation, Pure, SemanticUI, UIKit frameworks",
     "keywords": [
         "jQuery",
