--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "formValidation",
     "description": "The best jQuery plugin to validate form fields. Support Bootstrap, Foundation, Pure, SemanticUI, UIKit frameworks",
-    "version": "0.6.0",
+    "version": "0.6.1-dev",
     "ignore": [
         "demo",
         "screenshots",
