--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "formvalidation",
-    "version": "0.6.0",
+    "version": "0.6.1-dev",
     "description": "The best jQuery plugin to validate form fields. Support Bootstrap, Foundation, Pure, SemanticUI, UIKit frameworks",
     "keywords": [
         "jQuery",
