--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "grunt-contrib-concat": "latest",
         "grunt-contrib-copy": "latest",
         "grunt-contrib-cssmin": "latest",
+        "grunt-contrib-jasmine": "latest",
         "grunt-contrib-jshint": "latest",
         "grunt-contrib-uglify": "latest",
         "grunt-contrib-watch": "latest"
